# media-streaming-app-and-server

./: .gitignore  CMakeCache.txt  CMakeLists.txt  main.cpp
Client/src/: main.cpp
Server/src/: main.cpp
